Backing Up Configurations

--- a/Kitty/.config/kitty/kitty.conf
+++ b/Kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # Font Family
 
-font_size 18
+font_size 12
 
 cursor_shape block
 
@@ -9,6 +9,9 @@ url_style curly
 
 foreground #eec49a
 background #0a1124
-background_opacity 0.75
+
+background_opacity 0.8
 
 tab_bar_style powerline
+
+confirm_os_window_close 0
