--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Neovim/.config/nvim"]
 	path = Neovim/.config/nvim
 	url = https://github.com/Enhancifire/Neovim.git
+[submodule "Startpage"]
+	path = Startpage
+	url = https://github.com/Enhancifire/Start-Page.git
