--- a/Ranger/.config/ranger/rc.conf
+++ b/Ranger/.config/ranger/rc.conf
@@ -10,19 +10,15 @@ set preview_script ~/.config/ranger/scope.sh
 set use_preview_script true
 
 # Be aware of version control systems and display information.
-set vcs_aware false
+set vcs_aware true
 
 # Use one of the supported image preview protocols
 set preview_images true
 
-set preview_images_method ueberzug
+set preview_images_method kitty
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis true
-
-# Which colorscheme to use?  These colorschemes are available by default:
-# default, jungle, snow, solarized
-set colorscheme solarized
 
 # Draw the status bar on top of the browser window (default: bottom)
 set status_bar_on_top false
@@ -31,7 +27,7 @@ set status_bar_on_top false
 set draw_borders true
 
 # Display the directory name in tabs?
-set dirname_in_tabs true 
+set dirname_in_tabs true
 
 # Enable this if key combinations with the Alt Key don't work for you.
 # (Especially on xterm)
@@ -49,13 +45,16 @@ set save_tabs_on_exit true
 set wrap_scroll true
 
 # Column ratio
-set column_ratios 2,2,4
+set column_ratios 2,2,3
 
 # Hidden filter
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Color scheme
-set colorscheme default
+set colorscheme zenburn
+
+# Show Hidden Files
+# set show_hidden true
 
 # ===================================================================
 # == Local Options
@@ -68,4 +67,6 @@ map gT cd "~/.Trash"
 # trash lives in ~/.local/share/Trash/files
 map <DELETE> shell -d trash-put %s
 map x shell -d trash-put %s
+
+map C nvim
 
