--- a/Kitty/.config/kitty/kitty.conf
+++ b/Kitty/.config/kitty/kitty.conf
@@ -1,8 +1,11 @@
+linux_display_server wayland
+wayland_titlebar_color background
+
 # Font
 font_family FantasqueSansMono
 font_size 18
 
-background_opacity 1.0
+background_opacity 0.7
 confirm_os_window_close 0
 tab_bar_style powerline
 url_style curly
