--- a/Kitty/.config/kitty/kitty.conf
+++ b/Kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
-linux_display_server wayland
-wayland_titlebar_color background
+# linux_display_server wayland
+# wayland_titlebar_color background
 
 # Font
 # font_family FantasqueSansMono
@@ -24,3 +24,4 @@ include current-theme.conf
 # include ./spiderman.conf
 
 sync_to_monitor yes
+hide_window_decorations yes
