--- a/Hyprland/.config/hypr/configs/keybinds.conf
+++ b/Hyprland/.config/hypr/configs/keybinds.conf
@@ -12,7 +12,8 @@ $volume = $scriptsDir/volume
 $files = thunar
 $browser = firefox
 # $terminal = footclient
-$terminal = kitty
+$terminal = kitty -e tmux -u new-session -A -s ReaperGaruda
+$launcher = /home/fs144/.config/rofi/bin/launcher
 
 
 
@@ -42,7 +43,8 @@ bind = $mainMod, E, exec, $files
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen,
-bind = $mainMod, R, exec, rofi -show drun
+# bind = $mainMod, R, exec, rofi -show drun
+bind = $mainMod, R, exec, $launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, t, togglesplit, # dwindle
 
