--- a/Hyprland/.config/hypr/hyprland.conf
+++ b/Hyprland/.config/hypr/hyprland.conf
@@ -1,12 +1,9 @@
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
-
-# exec-once =
-
 source = ~/.config/hypr/configs/autostart.conf
 source = ~/.config/hypr/configs/keybinds.conf
 source = ~/.config/hypr/configs/window_rules.conf
+source = ~/.config/hypr/configs/monitor_layout.conf
+source = ~/.config/hypr/configs/workspace.conf
+source = ~/.config/hypr/configs/env.conf
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -58,10 +55,13 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = true
+
+    blur {
+      enabled = yes
+      size = 3
+      passes = 1
+      new_optimizations = true
+    }
 
     drop_shadow = true
     shadow_range = 4
@@ -107,7 +107,7 @@ misc {
   disable_hyprland_logo=true
   disable_splash_rendering=true
   mouse_move_enables_dpms=true
-  vfr = false
+  vfr = true
 }
 
 # Example per-device config
