--- a/Hyprland/.config/hypr/configs/autostart.conf
+++ b/Hyprland/.config/hypr/configs/autostart.conf
@@ -2,10 +2,11 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = waybar
 exec-once = swww init
 exec-once = foot --server
-# exec-once = kitty --class hiddenkitty --title server --single-instance
+exec-once = kitty --class hiddenkitty --title server --single-instance
 exec-once = /usr/lib/kdeconnectd
 # exec-once = swww img ~/Wallpapers/wp1809901-one-punch-man-wallpapers.jpg
 exec-once = gnome-keyring
+exec-once = kanshi
 exec-once = nm-applet
 exec-once = blueman-applet
 exec-once = dunst
