feat: update hyprland configuration;

--- a/Hyprland/.config/hypr/configs/keybinds.conf
+++ b/Hyprland/.config/hypr/configs/keybinds.conf
@@ -3,6 +3,7 @@ $scriptsDir = $HOME/.config/hypr/scripts
 $hyprDir = $HOME/.config/hypr
 
 $wallpaper-change = $scriptsDir/changeWallpaper
+$wallpaper-aesthetic = $scriptsDir/randomAestheticWallpaper
 $wallpaper-select = $HOME/.scripts/select_aesthetic.py
 $light = $scriptsDir/brightup
 $dark = $scriptsDir/brightdown
@@ -93,7 +94,8 @@ bind = $shiftMod, PRINT, exec, hyprshot -m window
 
 # Wallpapers
 bind = $mainMod, W, exec, $wallpaper-change
-bind = $shiftMod, W, exec, $wallpaper-select
+# bind = $shiftMod, W, exec, $wallpaper-select
+bind = $shiftMod, W, exec, $wallpaper-aesthetic
 
 # Scratchpads
 bind = $mainMod CTRL, 1, exec, pypr toggle term
