--- a/Hyprland/.config/waybar/config
+++ b/Hyprland/.config/waybar/config
@@ -1,12 +1,12 @@
 {
-    "height": 30, // Waybar height (to be removed for auto height)
+    // "height": 20, // Waybar height (to be removed for auto height)
     "layer": "top", // Waybar at top layer
     "margin-top": 6,
     "margin-left": 10,
     "margin-bottom": 4,
     "margin-right": 10,
     "spacing": 5, // Gaps between modules (4px)
-    "modules-left": ["wlr/workspaces", "wlr/window", "custom/weather"],
+    "modules-left": ["sway/workspaces", "wlr/window", "custom/weather"],
     "modules-center": ["mpris"],
     "modules-right": ["tray", "backlight", "pulseaudio", "battery", "clock", "custom/power-menu"],
     "wlr/workspaces": {
