--- a/Kitty/.config/kitty/kitty.conf
+++ b/Kitty/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@ font_family FantasqueSansM Nerd Font
 # font_family MonoLisa Nerd Font Regular
 font_size 16
 
-# background_opacity 0.8
+background_opacity 0.8
 # background_opacity 1
 confirm_os_window_close 0
 tab_bar_style powerline
