--- a/Hyprland/.config/waybar/config
+++ b/Hyprland/.config/waybar/config
@@ -6,38 +6,40 @@
     "margin-bottom": 4,
     "margin-right": 10,
     "spacing": 5, // Gaps between modules (4px)
-    "modules-left": ["sway/workspaces", "wlr/window", "custom/weather"],
+    //"wlr/window",
+    "modules-left": ["hyprland/workspaces",  "custom/weather"],
     "modules-center": ["mpris"],
     "modules-right": ["tray", "backlight", "pulseaudio", "battery", "clock", "custom/power-menu"],
     "wlr/workspaces": {
       "format": "{icon}",
       "on-click": "activate",
       "format-icons": {
-        "1": "",
-        "2": "",
-        "3": "",
-        "4": "",
-        "5": "",
-        "6": "",
-        "7": "",
-        "8": "",
-        "9": "",
-        "0": "",
-        "urgent": "",
-        "active": "",
-        "default": ""
+        "1": "  1",
+        "2": "  2",
+        "3": "  3",
+        "4": "  4",
+        "5": "  5",
+        "6": "  6",
+        "7": "  7",
+        "8": "  8",
+        "9": "  9",
+        "0": "  0",
+        "urgent": " ",
+        "active": " ",
+        "default": " "
       },
-      "persistent_workspaces": {
-	"1": [],
-	"2": [],
-	"3": [],
-	"4": [],
-	"5": [],
-	"6": [],
-	"7": [],
-	"8": [],
-	"9": [],
-      }
+     "persistent_workspaces": true,
+     //"persistent_workspaces": {
+     //  "1": [],
+     //  "2": [],
+     //  "3": [],
+     //  "4": [],
+     //  "5": [],
+     //  "6": [],
+     //  "7": [],
+     //  "8": [],
+     //  "9": [],
+     //}
     },
     "hyprland/window": {
         "format": "{title}"
