--- a/Hyprland/.config/hypr/configs/autostart.conf
+++ b/Hyprland/.config/hypr/configs/autostart.conf
@@ -4,11 +4,12 @@ exec-once = swww init
 exec-once = foot --server
 exec-once = kitty --class hiddenkitty --title server --single-instance
 exec-once = /usr/lib/kdeconnectd
-exec-once = swww img ~/Wallpapers/wp1809901-one-punch-man-wallpapers.jpg
+exec-once = swww img ~/Wallpapers/Aesthetic/yorha.jpg
 exec-once = gnome-keyring
 exec-once = kanshi
 exec-once = nm-applet
 exec-once = blueman-applet
 exec-once = dunst
+exec-once = kdeconnect-indicator
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # exec-once = pypr
