--- a/Hyprland/.config/hypr/configs/keybinds.conf
+++ b/Hyprland/.config/hypr/configs/keybinds.conf
@@ -15,6 +15,7 @@ $browser = firefox
 # $terminal = footclient
 $terminal = kitty -e tmux -u new-session -A -s ReaperGaruda
 $launcher = /home/fs144/.config/rofi/bin/launcher
+$ $launcher = /home/fs144/.config/rofi/bin/launcher
 
 
 
