--- a/Tmux/.config/tmux/tmux.conf
+++ b/Tmux/.config/tmux/tmux.conf
@@ -24,10 +24,14 @@ bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 set -g @catppuccin_powerline_icons_theme_enabled on
 set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
-set -g @catppuccin_l_left_separator ""
-set -g @catppuccin_l_right_separator ""
-set -g @catppuccin_r_left_separator ""
-set -g @catppuccin_r_right_separator ""
+set -g @catppuccin_left_separator "█"
+set -g @catppuccin_right_separator "█"
+# set -g @catppuccin_left_separator "█"
+# set -g @catppuccin_right_separator "█"
+# set -g @catppuccin_l_left_separator ""
+# set -g @catppuccin_l_right_separator ""
+# set -g @catppuccin_r_left_separator ""
+# set -g @catppuccin_r_right_separator ""
 
 # # Rose Pine Configuation
 # set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
