--- a/Hyprland/.config/hypr/configs/keybinds.conf
+++ b/Hyprland/.config/hypr/configs/keybinds.conf
@@ -4,7 +4,9 @@ $hyprDir = $HOME/.config/hypr
 
 $wallpaper-change = $scriptsDir/changeWallpaper
 $wallpaper-aesthetic = $scriptsDir/randomAestheticWallpaper
-$wallpaper-select = $HOME/.scripts/select_aesthetic.py
+$wallpaper-select = $HOME/.scripts/wallpaper-switcher2
+$radio = $HOME/.scripts/rofi-lofi.fish
+
 $light = $scriptsDir/brightup
 $dark = $scriptsDir/brightdown
 $backlight = $scriptsDir/brightness
@@ -36,6 +38,7 @@ bind = ,xf86audioplay, exec, playerctl play-pause
 bind = ,xf86audionext, exec, playerctl next
 bind = ,xf86audioprev, exec, playerctl previous
 bind = ,xf86audiostop, exec, playerctl stop
+bind = $shiftMod, R, exec, $radio
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
@@ -95,8 +98,8 @@ bind = $shiftMod, PRINT, exec, hyprshot -m window
 
 # Wallpapers
 bind = $mainMod, W, exec, $wallpaper-change
-# bind = $shiftMod, W, exec, $wallpaper-select
-bind = $shiftMod, W, exec, $wallpaper-aesthetic
+bind = $shiftMod, W, exec, $wallpaper-select
+# bind = $shiftMod, W, exec, $wallpaper-aesthetic
 
 # Scratchpads
 bind = $mainMod CTRL, 1, exec, pypr toggle term
