--- a/Hyprland/.config/hypr/hyprland.conf
+++ b/Hyprland/.config/hypr/hyprland.conf
@@ -1,9 +1,11 @@
+source = ~/.config/hypr/configs/env.conf
+source = ~/.config/hypr/configs/nvidia.conf
 source = ~/.config/hypr/configs/autostart.conf
+source = ~/.config/hypr/configs/theme.conf
 source = ~/.config/hypr/configs/keybinds.conf
 source = ~/.config/hypr/configs/window_rules.conf
 source = ~/.config/hypr/configs/monitor_layout.conf
 source = ~/.config/hypr/configs/workspace.conf
-source = ~/.config/hypr/configs/env.conf
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -36,14 +38,18 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 3
-    gaps_out = 5
+    gaps_out = 3
     border_size = 3
-    col.active_border = 0xFFDC0073 0xFFCEC2FF 0xFF40C9A2 0xFFB3B3F1 45deg
+    # col.active_border = 0xFFDC0073 0xFFCEC2FF 0xFF40C9A2 0xFFB3B3F1 45deg
+    # col.active_border = 0xFFB6244F 0xFFB3B3F1 0xFFEB5E28 0xFFEB5E28 45deg
+    col.active_border = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.inactive_border = rgba(b4befecc) rgba(6c7086cc) 45deg
     # 0xFFF4B9B2
     # col.active_border = 0xff5e81ac
-    col.inactive_border = 0xFFC9E4E7
+    # col.inactive_border = 0xFFB3B3F1
 
-    layout = dwindle
+    # layout = dwindle
+    layout = master
 }
 
 # Blur for Waybar
@@ -55,10 +61,14 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
+    # active_opacity = 1.0
+    # inactive_opacity = 0.7
+    dim_inactive = false
+    dim_strength = 0.3
 
     blur {
       enabled = yes
-      size = 3
+      size = 5
       passes = 1
       new_optimizations = true
     }
@@ -104,10 +114,12 @@ gestures {
 }
 
 misc {
-  disable_hyprland_logo=true
-  disable_splash_rendering=true
+  disable_hyprland_logo = true
+  disable_splash_rendering = false
   mouse_move_enables_dpms=true
   vfr = true
+  vrr = 1
+  enable_swallow = true
 }
 
 # Example per-device config
@@ -116,3 +128,9 @@ device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
+group {
+    col.border_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.border_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
+    col.border_locked_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.border_locked_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
+}
