--- a/Shell/.config/starship.toml
+++ b/Shell/.config/starship.toml
@@ -1,9 +1,14 @@
-add_newline = true
+add_newline = false
+format = """$directory$character"""
 palette = "catppuccin_mocha"
+right_format = """$all"""
 
 [directory]
-truncation_length = 4
+# truncation_length = 4
 style = "bold lavender"
+
+[golang]
+format = '[ $version](bold cyan) '
 
 [palettes.catppuccin_macchiato]
 rosewater = "#f4dbd6"
