--- a/Tmux/.config/tmux/tmux.conf
+++ b/Tmux/.config/tmux/tmux.conf
@@ -4,16 +4,29 @@ set -g prefix C-Space
 bind C-Space send-prefix
 set -g mouse on
 
+set -g status-position top
+set -g status-style 'bg=#1e1e2e'
+set -g status-left-length 200
+set -g status-right-length 200
+set -g status-justify left
+
 set-option -sa terminal-overrides ",xterm*:Tc"
 set-option -g default-terminal "screen-256color"
 set -s escape-time 0
 
 set -g base-index 1
 set -g pane-base-index 1
+set -g history-limit 1000000
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+set -g set-clipboard on
+set -g status-interval 3
+
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
 
 set-window-option -g mode-keys vi
+setw -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
@@ -24,10 +37,10 @@ bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 set -g @catppuccin_powerline_icons_theme_enabled on
 set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
-set -g @catppuccin_left_separator "█"
-set -g @catppuccin_right_separator "█"
-# set -g @catppuccin_left_separator "█"
-# set -g @catppuccin_right_separator "█"
+# set -g @catppuccin_left_separator "█"
+# set -g @catppuccin_right_separator "█"
+set -g @catppuccin_left_separator "█"
+set -g @catppuccin_right_separator "█"
 # set -g @catppuccin_l_left_separator ""
 # set -g @catppuccin_l_right_separator ""
 # set -g @catppuccin_r_left_separator ""
@@ -86,10 +99,11 @@ bind % split-window -h -c "#{pane_current_path}"
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'rose-pine/tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'rose-pine/tmux'
+set -g @plugin 'omerxx/tmux-sessionx'
 
 set -g @resurrect-strategy-nvim 'session'
 
