Update config files;

--- a/Hyprland/.config/hypr/hyprland.conf
+++ b/Hyprland/.config/hypr/hyprland.conf
@@ -42,7 +42,8 @@ general {
     border_size = 3
     # col.active_border = 0xFFDC0073 0xFFCEC2FF 0xFF40C9A2 0xFFB3B3F1 45deg
     # col.active_border = 0xFFB6244F 0xFFB3B3F1 0xFFEB5E28 0xFFEB5E28 45deg
-    col.active_border = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    # col.active_border = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.active_border = rgba(A89984de)
     col.inactive_border = rgba(b4befecc) rgba(6c7086cc) 45deg
     # 0xFFF4B9B2
     # col.active_border = 0xff5e81ac
@@ -71,6 +72,9 @@ decoration {
       size = 5
       passes = 1
       new_optimizations = true
+      noise = 0.2
+      vibrancy = 80
+      special = true
     }
 
     drop_shadow = true
