--- a/Tmux/.config/tmux/tmux.conf
+++ b/Tmux/.config/tmux/tmux.conf
@@ -4,11 +4,13 @@ set -g prefix C-Space
 bind C-Space send-prefix
 set -g mouse on
 
+
 set -g status-position top
 set -g status-style 'bg=#1e1e2e'
-set -g status-left-length 200
-set -g status-right-length 200
+# set -g status-left-length 200
+# set -g status-right-length 200
 set -g status-justify left
+set -g status-right "#{battery_icon} #{battery_percentage}"
 
 set-option -sa terminal-overrides ",xterm*:Tc"
 set-option -g default-terminal "screen-256color"
@@ -31,30 +33,48 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
+bind-key -r b run-shell "tmux neww btop"
 # bind-key -r N run-shell "tmux new ~/.scripts/tmux-sessionizer ~/.config/nvim"
 
 # Catppuccin Configuration
 set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 set -g @catppuccin_powerline_icons_theme_enabled on
 set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
-# set -g @catppuccin_left_separator "█"
-# set -g @catppuccin_right_separator "█"
-set -g @catppuccin_left_separator "█"
-set -g @catppuccin_right_separator "█"
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█"
+set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_window_status_enable "yes"
+set -g @catppuccin_window_status_icon_enable "yes"
+set -g @catppuccin_icon_window_last ""
+set -g @catppuccin_icon_window_current ""
+set -g @catppuccin_icon_window_zoom "󰁌"
+set -g @catppuccin_icon_window_mark "󰃀"
+set -g @catppuccin_icon_window_silent "󰂛"
+set -g @catppuccin_icon_window_activity "󰖲"
+set -g @catppuccin_icon_window_bell "󰂞"
+
+set -g @catppuccin_status_modules_right "session battery"
+
+
+# set -g @catppuccin_window_left_separator "█"
+# set -g @catppuccin_window_right_separator "█"
 # set -g @catppuccin_l_left_separator ""
 # set -g @catppuccin_l_right_separator ""
-# set -g @catppuccin_r_left_separator ""
-# set -g @catppuccin_r_right_separator ""
 
 # # Rose Pine Configuation
-# set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
+# set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
 #
 # set -g @rose_pine_host 'on' # Enables hostname in the status bar
 # set -g @rose_pine_date_time '' # It accepts the date UNIX command format (man date for info)
 # set -g @rose_pine_user 'on' # Turn on the username component in the statusbar
 # # set -g @rose_pine_window_tabs_enabled 'on' # When active, show program instead of current directory
-# set -g @rose_pine_bar_bg_disabls 'on'
-# # If set to 'on', disables background color, for transparent terminal emulators
+# set -g @rose_pine_bar_bg_disable 'off'
 # set -g @rose_pine_only_windows 'on' # Leaves only the window module, for max focus and space
 #
 # set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
@@ -64,7 +84,7 @@ set -g @catppuccin_right_separator "█"
 # set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
 # set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
 # set -g @rose_pine_window_status_separator "  " # Changes the default icon that appears between window names
-#
+
 # # Very beta and specific opt-in settings, tested on v3.2a, look at issue #10
 # set -g @rose_pine_prioritize_windows 'on' # Disables the right side functionality in a certain window count / terminal width
 # set -g @rose_pine_width_to_hide '80' # Specify a terminal width to toggle off most of the right side functionality
@@ -95,17 +115,18 @@ bind -n M-p previous-window
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+set -g @resurrect-strategy-nvim 'session'
+
 
 # Plugins
-set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
-# set -g @plugin 'rose-pine/tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tpm'
 
-set -g @resurrect-strategy-nvim 'session'
 
 # Run Plugins
 run ~/.tmux/plugins/tpm/tpm
