--- a/Hyprland/.config/hypr/hyprland.conf
+++ b/Hyprland/.config/hypr/hyprland.conf
@@ -128,9 +128,9 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
+# device:epic-mouse-v1 {
+#     sensitivity = -0.5
+# }
 
 group {
     col.border_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
