--- a/Hyprland/.config/hypr/configs/autostart.conf
+++ b/Hyprland/.config/hypr/configs/autostart.conf
@@ -4,7 +4,7 @@ exec-once = swww init
 exec-once = foot --server
 exec-once = kitty --class hiddenkitty --title server --single-instance
 exec-once = /usr/lib/kdeconnectd
-exec-once = swww img ~/Wallpapers/Aesthetic/yorha.jpg
+# exec-once = swww img ~/Wallpapers/Aesthetic/yorha.jpg
 exec-once = gnome-keyring
 exec-once = kanshi
 exec-once = nm-applet
