--- a/Hyprland/.config/hypr/configs/keybinds.conf
+++ b/Hyprland/.config/hypr/configs/keybinds.conf
@@ -16,8 +16,10 @@ $files = thunar
 $browser = firefox
 # $terminal = footclient
 $terminal = kitty -e tmux -u new-session -A -s ReaperGaruda
-$launcher = /home/fs144/.config/rofi/bin/launcher
-$ $launcher = /home/fs144/.config/rofi/bin/launcher
+$tmuxSelect = $HOME/.scripts/rofi-tmux.sh
+# $launcher = /home/fs144/.config/rofi/bin/launcher
+# $launcher = /home/fs144/.config/rofi/bin/launcher
+$launcher = wofi --show drun
 
 
 
@@ -42,6 +44,7 @@ bind = $shiftMod, R, exec, $radio
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
+bind = $shiftMod, return, exec, $tmuxSelect
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $files
