--- a/Hyprland/.config/hypr/configs/monitor_layout.conf
+++ b/Hyprland/.config/hypr/configs/monitor_layout.conf
@@ -1,6 +1,7 @@
 # # See https://wiki.hyprland.org/Configuring/Monitors/
 #
 # monitor=HDMI-A-1,1920x1080@60, 0x0, 1
-# monitor=eDP-2,2560x1600@60, 1920x0, 1.5,
+# monitor=eDP-2,2560x1600@60, 0x0, 1
+monitor=eDP-2,1920x1200@165, 0x0, 1
 #  # vrr, 2
-# monitor=,preferred,auto,auto
+monitor=,preferred,auto, 1
