--- a/Hyprland/.config/hypr/hyprpaper.conf
+++ b/Hyprland/.config/hypr/hyprpaper.conf
@@ -1,4 +1,9 @@
-preload = ~/Wallpapers/wp1809910-saitama-wallpapers.png
-preload = ~/Wallpapers/819003.jpg
+preload = ~/Wallpapers/Aesthetic/rain_world1.png
+preload = ~/Wallpapers/Aesthetic/rain_world2.png
+preload = ~/Wallpapers/Aesthetic/aurora_borealis.png
 
-wallpaper = eDP-1, ~/Wallpapers/wp1809910-saitama-wallpapers.png
+preload = ~/Wallpapers/Aesthetic/cat_lofi_cafe.jpg
+preload = ~/Wallpapers/Aesthetic/death_parade.png
+
+
+wallpaper = eDP-1, ~/Wallpapers/Aesthetic/aurora_borealis.png
