--- a/Tmux/.config/tmux/tmux.conf
+++ b/Tmux/.config/tmux/tmux.conf
@@ -34,6 +34,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 
 bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 bind-key -r b run-shell "tmux neww btop"
+bind-key -r t run-shell "~/.scripts/tmux-ledger"
 # bind-key -r N run-shell "tmux new ~/.scripts/tmux-sessionizer ~/.config/nvim"
 
 # Catppuccin Configuration
