--- a/Hyprland/.config/hypr/configs/autostart.conf
+++ b/Hyprland/.config/hypr/configs/autostart.conf
@@ -1,12 +1,13 @@
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
-exec-once = swww init
+exec-once = swww-daemon
+# exec-once = hyprpaper
 exec-once = foot --server
 exec-once = kitty --class hiddenkitty --title server --single-instance
 exec-once = /usr/lib/kdeconnectd
-# exec-once = swww img ~/Wallpapers/Aesthetic/yorha.jpg
+exec-once = swww img ~/Wallpapers/Aesthetic/yorha.jpg
 exec-once = gnome-keyring
-exec-once = kanshi
+# exec-once = kanshi
 exec-once = nm-applet
 exec-once = blueman-applet
 exec-once = dunst
