--- a/Kitty/.config/kitty/kitty.conf
+++ b/Kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 linux_display_server wayland
-wayland_titlebar_color background
+# wayland_titlebar_color background
 
 # Font
 font_family FantasqueSansM Nerd Font
@@ -7,8 +7,8 @@ font_family FantasqueSansM Nerd Font
 # font_family MonoLisa Nerd Font Regular
 font_size 18
 
-background_opacity 0.7
-# background_opacity 1
+# background_opacity 0.7
+background_opacity 1
 confirm_os_window_close 0
 tab_bar_style powerline
 url_style curly
@@ -18,7 +18,7 @@ cursor_shape block
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Everforest Dark Hard
 include current-theme.conf
 # END_KITTY_THEME
 
