--- a/Hyprland/.config/hypr/configs/decorations.conf
+++ b/Hyprland/.config/hypr/configs/decorations.conf
@@ -31,10 +31,11 @@ decoration {
       special = true
     }
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    # #TODO temp fixes
+    # drop_shadow = true
+    # shadow_range = 4
+    # shadow_render_power = 3
+    # col.shadow = rgba(1a1a1aee)
 }
 
 animations {
