--- a/Hyprland/.config/hypr/configs/keybinds.conf
+++ b/Hyprland/.config/hypr/configs/keybinds.conf
@@ -15,10 +15,13 @@ $backlight = $scriptsDir/brightness
 $volume = $scriptsDir/volume
 
 $files = thunar
+# $browser = cachy-browser
 $browser = firefox
 # $terminal = footclient
 # $terminal = kitty -e tmux -u new-session -A -s ReaperGaruda
-$terminal = $HOME/.scripts/kitty_with_tmux.sh
+# $terminal = $HOME/.scripts/kitty_with_tmux.sh
+$terminal = $HOME/.scripts/ghostty_with_tmux.sh
+# $terminal = ghostty
 $notes = $HOME/.scripts/notes.sh
 $tmuxSelect = $HOME/.scripts/rofi-tmux.sh
 # $launcher = /home/fs144/.config/rofi/bin/launcher
