--- a/Hyprland/.config/hypr/hyprland.conf
+++ b/Hyprland/.config/hypr/hyprland.conf
@@ -26,12 +26,12 @@ blurls=lockscreen
 
 dwindle {
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    no_gaps_when_only = true
+    # no_gaps_when_only = true
     preserve_split = yes # you probably want this
 }
 
 master {
-    no_gaps_when_only = true
+    # no_gaps_when_only = true
 }
 
 misc {
@@ -43,12 +43,13 @@ misc {
   enable_swallow = true
 }
 
-group {
-    col.border_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
-    col.border_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
-    col.border_locked_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
-    col.border_locked_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
-}
+# #TODO Temp fixes
+# group {
+#     col.border_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+#     col.border_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
+#     col.border_locked_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+#     col.border_locked_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
+# }
 
 source = ~/.config/hypr/configs/autostart.conf
 
