--- a/Tmux/.config/tmux/tmux.conf
+++ b/Tmux/.config/tmux/tmux.conf
@@ -1,8 +1,11 @@
 # Keymaps
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix M-q
+# bind C-Space send-prefix
+bind M-q send-prefix
 set -g mouse on
+
+set -g default-terminal "tmux-256color"
 
 # Allow Yazi Image Display
 set -g allow-passthrough on
@@ -16,8 +19,7 @@ set -g status-style 'bg=#1e1e2e'
 set -g status-justify left
 set -g status-right "#{battery_icon} #{battery_percentage}"
 
-set-option -sa terminal-overrides ",xterm*:Tc"
-set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ",xterm-256color:RGB"
 set -s escape-time 0
 
 set -g base-index 1
@@ -41,72 +43,29 @@ bind-key -r b run-shell "tmux neww btop"
 bind-key -r t run-shell "~/.scripts/tmux-ledger"
 # bind-key -r N run-shell "tmux new ~/.scripts/tmux-sessionizer ~/.config/nvim"
 
-# Catppuccin Configuration
-set -g @catppuccin_flavor 'mocha' # or frappe, macchiato, mocha
-set -g @catppuccin_powerline_icons_theme_enabled on
-set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█"
-set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
-
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_window_status "text"
-set -g @catppuccin_window_status_icon_enable "yes"
-set -g @catppuccin_icon_window_last ""
-set -g @catppuccin_icon_window_current ""
-set -g @catppuccin_icon_window_zoom "󰁌"
-set -g @catppuccin_icon_window_mark "󰃀"
-set -g @catppuccin_icon_window_silent "󰂛"
-set -g @catppuccin_icon_window_activity "󰖲"
-set -g @catppuccin_icon_window_bell "󰂞"
-
-set -g @catppuccin_status_modules_right "session battery"
-
-
-# set -g @catppuccin_window_left_separator "█"
-# set -g @catppuccin_window_right_separator "█"
-# set -g @catppuccin_l_left_separator ""
-# set -g @catppuccin_l_right_separator ""
-
-# # Rose Pine Configuation
-# set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
-#
-# set -g @rose_pine_host 'on' # Enables hostname in the status bar
-# set -g @rose_pine_date_time '' # It accepts the date UNIX command format (man date for info)
-# set -g @rose_pine_user 'on' # Turn on the username component in the statusbar
-# # set -g @rose_pine_window_tabs_enabled 'on' # When active, show program instead of current directory
-# set -g @rose_pine_bar_bg_disable 'off'
-# set -g @rose_pine_only_windows 'on' # Leaves only the window module, for max focus and space
-#
-# set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
-# set -g @rose_pine_current_window_icon '' # Changes the default icon to the left of the active window name
-# set -g @rose_pine_folder_icon '' # Changes the default icon to the left of the current directory folder
-# set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
-# set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
-# set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
-# set -g @rose_pine_window_status_separator "  " # Changes the default icon that appears between window names
-
-# # Very beta and specific opt-in settings, tested on v3.2a, look at issue #10
-# set -g @rose_pine_prioritize_windows 'on' # Disables the right side functionality in a certain window count / terminal width
-# set -g @rose_pine_width_to_hide '80' # Specify a terminal width to toggle off most of the right side functionality
-# set -g @rose_pine_window_count '5' # Specify a number of windows, if there are more than the number, do the same as width_to_hide
-
 # Smart pane switching with awareness of Vim splits.
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
-bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
-bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
-bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
-bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
+# bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
+# bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
+# bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
+# bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+# tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+# if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+#     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+# if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+#     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+# Smart pane switching with awareness of Neovim splits.
+bind-key -n M-h if -F "#{@pane-is-vim}" 'send-keys M-h'  'select-pane -L'
+bind-key -n M-j if -F "#{@pane-is-vim}" 'send-keys M-j'  'select-pane -D'
+bind-key -n M-k if -F "#{@pane-is-vim}" 'send-keys M-k'  'select-pane -U'
+bind-key -n M-l if -F "#{@pane-is-vim}" 'send-keys M-l'  'select-pane -R'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+    "bind-key -n 'C-\\' if -F \"#{@pane-is-vim}\" 'send-keys C-\\'  'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+    "bind-key -n 'C-\\' if -F \"#{@pane-is-vim}\" 'send-keys C-\\\\'  'select-pane -l'"
 
 bind-key -T copy-mode-vi 'M-h' select-pane -L
 bind-key -T copy-mode-vi 'M-j' select-pane -D
@@ -131,6 +90,57 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tpm'
+
+set -g @sessionx-bind 'o'
+
+# Configure Catppuccin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_pane_status_enabled "off"
+set -g @catppuccin_pane_border_status "off"
+
+# status left look and feel
+set -g status-left-length 100
+set -g status-left ""
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
+# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+
+# status right look and feel
+set -g status-right-length 100
+set -g status-right ""
+set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=#{@thm_bg}]},#{#[bg=#{@thm_bg},fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
+# set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+# set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
+
+
+# Configure Tmux
+set -g status-position bottom
+set -g status-style "bg=#{@thm_bg}"
+set -g status-justify "absolute-centre"
+
+set -wg automatic-rename on
+set -g automatic-rename-format "#{pane_current_command}"
+
+set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
+set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
+set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
+
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
+
+set -g @resurrect-capture-pane-contents "on"
+set -g @continuum-restore "on"
 
 
 # Run Plugins
