--- a/Hyprland/.config/hypr/configs/autostart.conf
+++ b/Hyprland/.config/hypr/configs/autostart.conf
@@ -1,8 +1,8 @@
-exec-once=systemctl --user start plasma-polkit-agent
+exec-once = systemctl --user start plasma-polkit-agent
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = foot --server
-exec-once = kitty --class hiddenkitty --title server --single-instance
+# exec-once = foot --server
+# exec-once = kitty --class hiddenkitty --title server --single-instance
 exec-once = /usr/lib/kdeconnectd
 exec-once = gnome-keyring
 # exec-once = kanshi
