--- a/Hyprland/.config/hypr/configs/monitor_layout.conf
+++ b/Hyprland/.config/hypr/configs/monitor_layout.conf
@@ -5,6 +5,7 @@
 # monitor=eDP-1,1920x1200@165, 0x1080, 1
 # monitor=HDMI-A-1, 1920x1080@75, 0x0, 1
 monitor=eDP-1,1920x1200@165, 1920x0, 1
+monitor=eDP-2,1920x1200@165, 0x0, 1
 monitor=HDMI-A-1, 1920x1080@75, 0x0, 1
 #  # vrr, 2
 monitor=,preferred,auto, 1
